--- a/package.json
+++ b/package.json
@@ -1,39 +1,60 @@
 {
-  "name": "chalkboard",
-  "version": "1.0.0",
-  "description": "Collection of bouldering exercises and drills.",
-  "scripts": {
-    "build": "node ./build/index.js",
-    "build:watch": "npx nodemon --watch build --watch src --watch data -e html,css,js,json,handlebars ./build/index.js",
-    "serve": "npx http-server -c-1 -o",
-    "dev": "npx concurrently \"npm run build:watch\" \"npm run serve\"",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "format": "npx prettier --write ."
-  },
-  "keywords": [],
-  "author": "JanMalch",
-  "license": "UNLICENSED",
-  "type": "module",
-  "private": true,
-  "devDependencies": {
-    "@types/html-minifier": "^4.0.6",
-    "ajv": "^8.17.1",
-    "concurrently": "^9.2.1",
-    "esbuild": "^0.27.3",
-    "handlebars": "^4.7.8",
-    "html-minifier": "^4.0.0",
-    "http-server": "^14.1.1",
-    "nodemon": "^3.1.11",
-    "prettier": "^3.8.1"
-  },
-  "dependencies": {
-    "@fontsource/roboto-mono": "^5.2.8",
-    "comparing": "^1.3.1",
-    "modern-normalize": "^3.0.1"
-  },
-  "prettier": {
-    "semi": true,
-    "singleQuote": true,
-    "trailingComma": "es5"
-  }
+	"name": "chalkboard",
+	"private": true,
+	"version": "0.0.1",
+	"type": "module",
+	"scripts": {
+		"dev": "vite dev",
+		"prebuild": "node ./update-search.js",
+		"build": "vite build",
+		"preview": "vite preview",
+		"prepare": "husky || true; svelte-kit sync || echo ''",
+		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+		"lint": "prettier --check . && eslint .",
+		"format": "prettier --write .",
+		"test:unit": "vitest",
+		"test": "npm run test:unit -- --run && npm run test:e2e",
+		"test:e2e": "playwright test"
+	},
+	"devDependencies": {
+		"@eslint/compat": "^2.0.2",
+		"@eslint/js": "^9.39.2",
+		"@playwright/test": "^1.58.1",
+		"@sveltejs/adapter-static": "^3.0.10",
+		"@sveltejs/kit": "^2.50.2",
+		"@sveltejs/vite-plugin-svelte": "^6.2.4",
+		"@types/node": "^22",
+		"eslint": "^9.39.2",
+		"eslint-config-prettier": "^10.1.8",
+		"eslint-plugin-svelte": "^3.14.0",
+		"globals": "^17.3.0",
+		"husky": "^9.1.7",
+		"lint-staged": "^16.2.7",
+		"prettier": "^3.8.1",
+		"prettier-plugin-svelte": "^3.4.1",
+		"sass-embedded": "^1.97.3",
+		"svelte": "^5.51.0",
+		"svelte-check": "^4.3.6",
+		"typescript": "^5.9.3",
+		"typescript-eslint": "^8.54.0",
+		"vite": "^7.3.1",
+		"vite-plugin-devtools-json": "^1.0.0",
+		"vitest": "^4.0.18"
+	},
+	"dependencies": {
+		"@fontsource/roboto-mono": "^5.2.8",
+		"@humanspeak/svelte-virtual-list": "^0.4.1",
+		"comparing": "^1.3.1",
+		"debounce": "^3.0.0",
+		"fuse.js": "^7.1.0",
+		"modern-normalize": "^3.0.1"
+	},
+	"lint-staged": {
+		"src/lib/assets/data/*.json": [
+			"node ./update-data.js",
+			"prettier --write"
+		],
+		"!(src/lib/assets/data/*.json)": "prettier --write"
+	}
 }
